Working on Section 2.3, Finished through step 7

--- a/index.html
+++ b/index.html
@@ -5,5 +5,76 @@
       <link rel="stylesheet" href="./css/styles.css">
    </head>
    <body>
+       <h1>Walter Smith</h1>
+       <img id="self_portrait" src="./images/walter_smith.jpg" alt="Walter Smith">
+       <h2>Personal Info:</h2>
+       <ul>
+           <li><em>Major</em>: Computer Science</li>
+           <li><em>High School</em>: American Fork High School, Class of 1999</li>
+           <li><em>Current year at UVU</em>: Sophomore</li>
+           <li><em>Favorite ice cream</em>: Ben & Jerry's Phish Food</li>
+       </ul>
+       <h2>My five favorite books</h2>
+       <ol>
+           <li><i>The Dresden Files, </i><a href="https://www.jim-butcher.com/">Jim Butcher</a></li>
+           <li><i>Ender's Game, </i><a href="http://www.hatrack.com/">Orson Scott Card</a></li>
+           <li><i>Lisey's Story, </i><a href="https://stephenking.com/">Stephen King</a></li>
+           <li><i>The Last Kingdom Series, </i><a href="http://www.bernardcornwell.net/">Bernard Cornwell</a></li>
+           <li><i>Mistborn, </i><a href="https://www.brandonsanderson.com/">Brandon Sanderson</a></li>
+       </ol>
+       <h2>Kids, A Limmerick</h2>
+       <p>For those times when you don't understand anything at all but you're still able to make it better.</p>
+       My girls like to cry when the're sad<br>
+       My girls like to cry when they're mad<br>
+       I just don't understand<br>
+       Emotions they command<br>
+       But I love to hear them call for Dad.</p>
+       <h2>My personal interests</h2>
+       <p> My big interest right now is options trading. I love numbers, charts and money. 
+           I enjoy trying to find under aprreciated companies that have a great product but for
+           some reason the 'experts' haven't noticed them yet.
+       </p>
+       <p> I love camping!! For entirely too long I was not able to go camping and spend much
+           time outside. This summer the plan is to go at least once a month. My wife an I got 
+           tents (one for us, one for the kids), sleeping bags, air matresses, space heaters,
+           propane grills, etc. I guess camping has now turned into glamping, but the older we get,
+           the more comfortable we want to be.
+       </p>
+       <p> Another interest is wood working. I took a class a few years ago and spent a lot of time
+           making cabinets, tables, hope chests, and picture frames. We also made a few storage sheds
+           which turned out to be really small homes. I learned that I really enjoy working with wood,
+           turning it into something useful and functional.
+       </p>
+       <h2>Class Schedule</h2>
+       <table>
+           <tr>
+               <th></th>
+               <th>Monday</th>
+               <th>Tuesday</th>
+               <th>Wednesday</th>
+               <th>Thursday</th>
+               <th>Friday</th>
+           </tr>
+           <tr>
+               <td>9:00</td>
+               <td>9:30</td>
+               <td>10:00</td>
+               <td>10:30</td>
+               <td>11:00</td>
+               <td>11:30</td>
+               <td>12:00</td>
+               <td>12:30</td>
+               <td>1:00</td>
+               <td>1:30</td>
+               <td>2:00</td>
+               <td>2:30</td>
+               <td>3:00</td>
+               <td>3:30</td>
+               <td>4:00</td>
+               <td>4:30</td>
+               <td>5:00</td>
+               <td>5:30</td>
+           </tr>
+       </table>
    </body>
 </html>
