Added footer and header style

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>About Walter Smith</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-
-<body>
-    <h1>Walter Smith</h1>
+<header>
     <img id="self_portrait" src="./images/walter_smith.jpg" alt="Walter Smith">
+    <h1>Walter Smith</h1>
+</header>
+<body>
     <h2>Personal Info:</h2>
     <ul>
         <li><em>Major</em>: Computer Science</li>
@@ -173,6 +174,10 @@
             <td></td>
         </tr>
     </table>
+    <!-- starter of footer -->
+    <footer>
+        &copy; 2021 &bull; Walter Smith
+    </footer>
 </body>
 
 </html>
